--- a/WebPage/templates/index.html
+++ b/WebPage/templates/index.html
@@ -85,7 +85,7 @@
             </a>
           </li>
           <li class="nav-item">
-            <a href="https://github.com/ChanJin0801?tab=repositories" class="nav-link border border-light rounded"
+            <a href="https://github.com/ChanJin0801/LungDiseaseKaggle" class="nav-link border border-light rounded"
               target="_blank">
               <i class="fa fa-github mr-2"></i>GitHub
             </a>
@@ -138,7 +138,7 @@
                 <strong>get chest x-ray data from Kaggle web site.</strong>
               </p>
 
-              <a target="_blank" href="https://github.com/ChanJin0801?tab=repositories" class="btn btn-outline-white btn-lg">LET'S GO GITHUB
+              <a target="_blank" href="https://github.com/ChanJin0801/LungDiseaseKaggle" class="btn btn-outline-white btn-lg">LET'S GO GITHUB
                 <i class="fa fa-graduation-cap ml-2"></i>
               </a>
             </div>
@@ -177,7 +177,7 @@
                 <strong>get chest x-ray data from Kaggle web site.</strong>
               </p>
 
-              <a target="_blank" href="https://github.com/ChanJin0801?tab=repositories" class="btn btn-outline-white btn-lg">LET'S GO GITHUB
+              <a target="_blank" href="https://github.com/ChanJin0801/LungDiseaseKaggle" class="btn btn-outline-white btn-lg">LET'S GO GITHUB
                 <i class="fa fa-graduation-cap ml-2"></i>
               </a>
             </div>
@@ -216,7 +216,7 @@
                 <strong>get chest x-ray data from Kaggle web site.</strong>
               </p>
 
-              <a target="_blank" href="https://github.com/ChanJin0801?tab=repositories" class="btn btn-outline-white btn-lg">LET'S GO GITHUB
+              <a target="_blank" href="https://github.com/ChanJin0801/LungDiseaseKaggle" class="btn btn-outline-white btn-lg">LET'S GO GITHUB
                 <i class="fa fa-graduation-cap ml-2"></i>
               </a>
             </div>
@@ -280,7 +280,7 @@
             </a>
 
             <!-- CTA -->
-            <a target="_blank" href="https://github.com/ChanJin0801?tab=repositories"
+            <a target="_blank" href="https://github.com/ChanJin0801/LungDiseaseKaggle/archive/master.zip"
               style="font-family: 'Nanum Barun Gothic'" class="btn btn-grey btn-md">Source code download
               <i class="fa fa-download ml-1"></i>
             </a>
@@ -372,7 +372,7 @@
 
     <!--Call to action-->
     <div class="pt-4">
-      <a class="btn btn-outline-white" href="https://github.com/ChanJin0801?tab=repositories" target="_blank" role="button">LET'S GO GITHUB
+      <a class="btn btn-outline-white" href="https://github.com/ChanJin0801/LungDiseaseKaggle" target="_blank" role="button">LET'S GO GITHUB
         <i class="fa fa-graduation-cap ml-2"></i>
       </a>
     </div>
