--- a/WebPage/templates/index.html
+++ b/WebPage/templates/index.html
@@ -40,6 +40,15 @@
         font-family: 'Nanum Barun Gothic' !important;
     }
 
+    .custom-file-label {
+	  	overflow: hidden;
+	    white-space: nowrap;
+	    // For nice text overflow we need also padding-right, problem is
+	    // the button width is not constant, but 8em should work for most cases
+	    padding-right: 8em;
+	    text-overflow: ellipsis;
+	}
+
   </style>
 </head>
 
@@ -127,7 +136,7 @@
             <!-- Content -->
             <div class="text-center white-text mx-5 wow fadeIn">
               <h1 class="mb-4">
-                <strong style="font-family: 'Nanum Barun Gothic'">predict lung disease by x-ray images</strong>
+                <strong style="font-family: 'Nanum Barun Gothic'">predict lung disease by X-ray images</strong>
               </h1>
 
               <p>
@@ -135,7 +144,7 @@
               </p>
 
               <p class="mb-4 d-none d-md-block">
-                <strong>get chest x-ray data from Kaggle web site.</strong>
+                <strong>get chest X-ray dataset from Kaggle web site.</strong>
               </p>
 
               <a target="_blank" href="https://github.com/ChanJin0801/LungDiseaseKaggle" class="btn btn-outline-white btn-lg">LET'S GO GITHUB
@@ -166,7 +175,7 @@
             <!-- Content -->
             <div class="text-center white-text mx-5 wow fadeIn">
               <h1 class="mb-4">
-                <strong style="font-family: 'Nanum Barun Gothic'">predict lung disease by x-ray images</strong>
+                <strong style="font-family: 'Nanum Barun Gothic'">predict lung disease by X-ray images</strong>
               </h1>
 
               <p>
@@ -174,7 +183,7 @@
               </p>
 
               <p class="mb-4 d-none d-md-block">
-                <strong>get chest x-ray data from Kaggle web site.</strong>
+                <strong>get chest X-ray dataset from Kaggle web site.</strong>
               </p>
 
               <a target="_blank" href="https://github.com/ChanJin0801/LungDiseaseKaggle" class="btn btn-outline-white btn-lg">LET'S GO GITHUB
@@ -205,7 +214,7 @@
             <!-- Content -->
             <div class="text-center white-text mx-5 wow fadeIn">
               <h1 class="mb-4">
-                <strong style="font-family: 'Nanum Barun Gothic'">predict lung disease by x-ray images</strong>
+                <strong style="font-family: 'Nanum Barun Gothic'">predict lung disease by X-ray images</strong>
               </h1>
 
               <p>
@@ -213,7 +222,7 @@
               </p>
 
               <p class="mb-4 d-none d-md-block">
-                <strong>get chest x-ray data from Kaggle web site.</strong>
+                <strong>get chest X-ray dataset from Kaggle web site.</strong>
               </p>
 
               <a target="_blank" href="https://github.com/ChanJin0801/LungDiseaseKaggle" class="btn btn-outline-white btn-lg">LET'S GO GITHUB
@@ -307,7 +316,7 @@
           <!--Grid column-->
           <div class="col-lg-6 col-md-12 px-4">
 
-              <p class="h5 text-left mb-4" style="font-family: 'Nanum Barun Gothic'">Upload chest x-ray image</p>
+              <p class="h5 text-left mb-4" style="font-family: 'Nanum Barun Gothic'">Upload chest X-ray image</p>
 
               <form action="/" method="POST" enctype="multipart/form-data">
 
